		with other transmitters in SFNs, as the timestamp interpretation can
		change!
		Add a timeout to the ZeroMQ input to quit on SIGINT (Ctrl-C).
		Optionally show the flowgraph metadata in the file output for
		test purposes.
		Replace usage of non-portable Linux-only clock_gettime().
		Add antenna selection to UHD and SoapySDR outputs.

2017-11-18: Matthias P. Braendli <matthias@mpb.li>
	(v1.1.0):
		Fix TII insertion power level.
		Fix bug in parsing timestamps appearing in rare conditions.
		Add Crest Factor Reduction prototype.
		Cleanup console output of flowgraph statistics.
		Add prototype for Digital Predistortion.
		Enable some additional compiler warnings.
		Add some useful UHD statistics to RC.
		Add configure option to disable march=native.

2017-06-05: Matthias P. Braendli <matthias@mpb.li>
	(v1.0.1):
		Move GainControl into a separate thread to make better use
		of multiprocessor systems.
		Give explicit names to GainControl modes (fix, max, var) in
		configuration.
		Add u8 IQ output format.
		Add a normalised complexf IQ output format.
		Read UHD async messages in separate thread to lessen influence on the
		time-critical transmit thread.
		Pre-fill UHD IQ buffer before starting to stream data, to ensure it is
		properly filled and reduce underruns.

2017-03-03: Matthias P. Braendli <matthias@mpb.li>
	(v1.0.0):
	* odr-dabmod:
		Add ETI-over-TCP input.
		Add EDI input.
		Add SoapySDR output, than can drive HackRF, LimeSDR and other boards.
		Add LO offset to UHD output.
		Make gainmode VAR the default and improve config syntax.
		Fix TII insertion.
		Display FCT and TIST in remote control.
		Add most commonly used FIRFilter taps into binary and enable the
		filter by default.
		Add fast math configure option that can be used to improve performance
		on ARM platforms as it allows the compiler to use NEON.
		Improve logging.
		Refactor internals (flowgraph, main loop, C++11 modernisation and more)

2016-07-30: Matthias P. Braendli <matthias@mpb.li>