@@ -1,23 +1,23 @@
 # Copyright (C) 2007, 2008, 2009, 2010 Her Majesty the Queen in Right
 # of Canada (Communications Research Center Canada)
 #
-#  Copyright (C) 2017
+#  Copyright (C) 2018
 #  Matthias P. Braendli, matthias.braendli@mpb.li
-
+#
 #   http://opendigitalradio.org
-
+#
 # This file is part of ODR-DabMod.
-# 
+#
 # ODR-DabMod is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as
 # published by the Free Software Foundation, either version 3 of the
 # License, or (at your option) any later version.
-# 
+#
 # ODR-DabMod is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
-# 
+#
 # You should have received a copy of the GNU General Public License
 # along with ODR-DabMod.  If not, see <http://www.gnu.org/licenses/>.
 
@@ -146,17 +146,6 @@ odr_dabmod_SOURCES  = src/DabMod.cpp \
 					  src/zmq.hpp \
 					  lib/crc.h \
 					  lib/crc.c \
-					  lib/InetAddress.h \
-					  lib/InetAddress.cpp \
-					  lib/UdpSocket.h \
-					  lib/UdpSocket.cpp \
-					  lib/edi/buffer_unpack.hpp \
-					  lib/edi/eti.cpp \
-					  lib/edi/ETIDecoder.cpp \
-					  lib/edi/ETIDecoder.hpp \
-					  lib/edi/eti.hpp \
-					  lib/edi/PFT.cpp \
-					  lib/edi/PFT.hpp \
 					  lib/fec/char.h \
 					  lib/fec/decode_rs_char.c \
 					  lib/fec/decode_rs.h \
@@ -167,3 +156,16 @@ odr_dabmod_SOURCES  = src/DabMod.cpp \
 					  lib/fec/init_rs.h \
 					  lib/fec/rs-common.h
 
+if COMPILE_EDI
+odr_dabmod_SOURCES += lib/edi/buffer_unpack.hpp \
+					  lib/edi/eti.hpp \
+					  lib/edi/eti.cpp \
+					  lib/edi/ETIDecoder.hpp \
+					  lib/edi/ETIDecoder.cpp \
+					  lib/edi/PFT.hpp \
+					  lib/edi/PFT.cpp \
+					  lib/UdpSocket.h \
+					  lib/UdpSocket.cpp \
+					  lib/InetAddress.h \
+					  lib/InetAddress.cpp
+endif
