@@ -46,6 +46,9 @@ static void printHeader()
 #if defined(HAVE_ZEROMQ)
         "zeromq " <<
 #endif
+#ifdef HAVE_EDI
+        "EDI " <<
+#endif
 #if defined(HAVE_OUTPUT_UHD)
         "output_uhd " <<
 #endif
